# rewindos

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  biome.json  index.html  install.sh  justfile  package.json  release  skills-lock.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  capture_not_working.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/rewindos-core/: Cargo.toml  build.rs
crates/rewindos-core/migrations/: V001__initial_schema.sql  V002__vector_embeddings.sql  V003__daily_summaries.sql  V004__bookmarks_collections.sql  V005__journal.sql  V006__journal_upgrade.sql  V007__chats.sql  V008__chat_model.sql  V009__meetings.sql
crates/rewindos-core/src/: app_label.rs  chat.rs  chat_store.rs  config.rs  db.rs  embedding.rs  error.rs  hasher.rs  lib.rs  mcp.rs  ocr.rs  paddle_ocr.rs  schema.rs  summary.rs  usage.rs  whisper_model.rs
crates/rewindos-core/src/vault/: emit_logseq.rs  emit_obsidian.rs  gather.rs  mod.rs  write.rs
crates/rewindos-daemon/: Cargo.toml
crates/rewindos-daemon/src/: capture.rs  detect.rs  heartbeat.rs  kwin_capture.rs  lock_watcher.rs  main.rs  mcp_server.rs  pipeline.rs  service.rs  window_info.rs
crates/rewindos-daemon/src/capture/: audio.rs  gate.rs  kwin.rs  mod.rs  portal.rs
crates/rewindos-daemon/src/meeting/: controller.rs  echo_cancel.rs  encode.rs  mod.rs  postprocess.rs  session.rs  whisper.rs
crates/rewindos-daemon/src/window_info/: gnome_shell.rs  kwin.rs  mod.rs  noop.rs  window_calls_ext.rs  wlr_foreign_toplevel.rs
docs/: architecture.md  capture-pipeline.md  capture-pressure-test.md  database-schema.md  dbus-api.md  frontend-spec.md  meeting-transcription-design.md  mvp-tasks.md  onboarding-friction.md  readme-shotlist.md
docs/superpowers/plans/: 2026-04-17-mcp-server-and-claude-chat.md  2026-04-24-amazing-chat-phase-a.md  2026-04-24-streaming-chat-and-sessions.md
docs/superpowers/specs/: 2026-04-17-agentic-rewindos-design.md  2026-04-24-amazing-chat-phase-a-design.md
packaging/aur/: PKGBUILD  rewindos.install
scripts/: paddleocr_worker.py  postinstall.sh  prerm.sh  release  test-bundle.sh  vm-install.sh  vm-test.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ask_stream.rs  audio_server.rs  chat_commands.rs  chat_context.rs  claude_code.rs  lib.rs  main.rs  updater.rs
src/app/: routes.tsx
src/components/: ActivityView.tsx  AddToCollectionMenu.tsx  AppDot.tsx  AskEmptyState.test.tsx  AskView.tsx  BookmarkButton.tsx  BoundingBoxOverlay.tsx  ChatMessage.test.tsx  ChatMessage.tsx  CollectionDetailView.tsx  DaemonPanel.tsx  DailyDigestCard.tsx  DashboardView.tsx  FocusView.tsx  GnomeExtensionBanner.tsx  HistoryView.tsx  RecallPalette.tsx  RewindView.tsx  SavedView.tsx  ScreenshotDetail.tsx  ScreenshotRefCard.tsx  ScrollHint.tsx  SearchBar.tsx  SearchResultCard.tsx  SearchResultGrid.tsx  SearchResults.tsx  SemanticBadge.tsx  SettingsView.tsx  Sidebar.test.tsx  Sidebar.tsx  Sparkline.tsx  StatCard.tsx  TimelineView.tsx  UnfilteredWarningBanner.tsx  UpdateToast.test.tsx  UpdateToast.tsx  ViewToggle.tsx  motion.tsx
src/components/ai-elements/: code-block.tsx  conversation.tsx
src/components/charts/: AppDonutChart.tsx  DailyActivityChart.tsx  EditorialAreaChart.tsx  EditorialBarChart.tsx  HeatmapCalendar.tsx  HourlyActivityChart.tsx  ScreenTimeChart.tsx  WeeklyHeatmap.tsx
src/components/shared/: ChartCard.tsx  ConfirmDialog.tsx  EmptyState.tsx  LoadingSpinner.tsx  ScreenshotCard.tsx
src/components/ui/: badge.tsx  button.tsx  calendar.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  scroll-area.tsx  select.tsx  skeleton.tsx  switch.tsx  tooltip.tsx
src/context/: AskContext.test.tsx  AskContext.tsx
src/features/ask/: AskEmptyState.test.tsx  AskEmptyState.tsx  AskMessages.tsx  AskModelPicker.tsx  AskView.tsx  AttachmentPicker.tsx  ChatMessage.test.tsx  ChatMessage.tsx  ChatSidebar.tsx  CitationChip.tsx  CitationSources.tsx  FollowupSuggestions.tsx  MessageActions.tsx
src/features/dashboard/: AppTimeline.tsx  CapturesCarousel.tsx  CategoriesBreakdown.tsx  DashboardView.tsx  DayRibbon.tsx  TopAppsLedger.tsx  TopTasksList.tsx  dashboard-utils.ts
src/features/focus/: FocusView.tsx
src/features/history/: AppsMode.tsx  DailyDigestCard.tsx  HistoryView.tsx  HourGroup.tsx  RangeSelectToolbar.tsx  TimelineMode.tsx  history-utils.ts
src/features/journal/: AISummaryPanel.tsx  AttachedScreenshot.tsx  ExportDialog.tsx  JournalEditor.tsx  JournalSearchPanel.tsx  JournalSidebar.tsx  JournalView.tsx  MiniCalendarHeatmap.tsx  OpenTodosPanel.tsx  ScreenshotPicker.test.tsx  ScreenshotPicker.tsx  SlashMenu.tsx  TagEditor.tsx  constants.ts  utils.ts
src/features/meetings/: AudioPlayer.tsx  MeetingConsentDialog.tsx  MeetingDetail.tsx  MeetingsList.tsx  MeetingsView.tsx  MicPicker.tsx  RecordingControls.tsx  TranscriptReader.tsx  useMeetings.ts
src/features/onboarding/: FirstRunWizard.tsx  OnboardingContext.test.tsx  OnboardingContext.tsx  WizardShell.tsx  deriveCaptureVerdict.test.ts  deriveCaptureVerdict.ts
src/features/rewind/: RewindControls.tsx  RewindPlayer.tsx  RewindScrubber.tsx  RewindView.tsx  rewind-utils.ts
src/hooks/: useAskStream.ts  useConfigQuery.ts  useFocusScore.ts  useGlobalKeyboard.ts  usePomodoroTimer.test.ts  usePomodoroTimer.ts  useRename.ts  useUpdateCheck.ts
src/lib/: api.ts  app-categories.ts  app-colors.ts  attachments.test.ts  attachments.ts  chat-messages.test.ts  chat-messages.ts  citations.test.ts  citations.ts  claude-models.test.ts  claude-models.ts  config.ts  date-presets.ts  followups.ts  format.test.ts  format.ts  ollama-chat.ts  provider-chat.ts  query-keys.test.ts  query-keys.ts  recall-parse.test.ts  recall-parse.ts  time-ranges.ts  utils.ts  window-title.ts
src/test/: setup.ts
systemd/: com.rewindos.Daemon.desktop  rewindos-daemon.service  rewindos.desktop
workers/update-proxy/: .gitignore  README.md  package.json  tsconfig.json  wrangler.jsonc
(+46 files in other folders)
