[workspace]
resolver = "2"
members = ["crates/rewindos-core", "crates/rewindos-daemon", "src-tauri"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
rewindos-core = { path = "crates/rewindos-core" }
image = "0.25"
webp = "0.3"
toml = "0.8"
regex-lite = "0.1"
dirs = "6"
futures = "0.3"
futures-util = "0.3"
ogg = "0.9"
opus = "0.3"
nix = "0.29"
reqwest = { version = "0.12", features = ["json"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
