[package]
name = "rewindos"
version = "0.1.0"
description = "Privacy-first screen capture and search for Linux"
authors = ["you"]
edition = "2021"

[lib]
name = "rewindos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
rewindos-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zbus = "5"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tauri-plugin-global-shortcut = "2.3.1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
chrono = { workspace = true }
toml = "0.8"
regex-lite = "0.1"
