[package]
name = "rewindos"
version = "0.1.0"
description = "Privacy-first screen capture and search for Linux"
authors = ["you"]
edition = "2021"

[lib]
name = "rewindos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
rewindos-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zbus = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tauri-plugin-global-shortcut = "2.3.1"
reqwest = { workspace = true }
uuid = { version = "1", features = ["v4"] }
futures = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
regex-lite = { workspace = true }
which = "7"
dirs = { workspace = true }
nix = { workspace = true, features = ["signal"] }
# Meeting-audio playback: WebKitGTK's GStreamer backend can only fetch media
# over file:// and http(s):// — never blob: or asset:// — so we decode the
# stored Ogg-Opus to WAV and serve it from a loopback HTTP server.
ogg = { workspace = true }
opus = { workspace = true }
tiny_http = "0.12"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
semver = "1"
tempfile = "3"
