[package]
name = "rewindos-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }
refinery = { version = "0.8", features = ["rusqlite"] }
image = "0.25"
image_hasher = "2"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
async-stream = "0.3"
regex-lite = "0.1"
sqlite-vec = "0.1"
webp = "0.3"

[dev-dependencies]
tempfile = "3"
