[package]
name = "rewindos-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }
refinery = { version = "0.8", features = ["rusqlite"] }
image = { workspace = true }
image_hasher = "2"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
futures = { workspace = true }
async-stream = "0.3"
regex-lite = { workspace = true }
sqlite-vec = "0.1"
webp = { workspace = true }
schemars = "1"

[dev-dependencies]
tempfile = "3"
