[package]
name = "rewindos-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
rewindos-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
zbus = { version = "5", default-features = false, features = ["tokio"] }
nix = { version = "0.29", features = ["fs", "poll"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
ashpd = { version = "0.10", features = ["tokio"] }
pipewire = "0.9"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
