[package]
name = "rewindos-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
rewindos-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
zbus = { workspace = true }
nix = { workspace = true, features = ["fs", "poll"] }
clap = { version = "4", features = ["derive"] }
image = { workspace = true }
webp = { workspace = true }
async-trait = "0.1"
ashpd = { version = "0.10", features = ["tokio"] }
pipewire = "0.9"
opus = { workspace = true }
ogg = { workspace = true }
whisper-rs = "0.16"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
rmcp = { version = "1.5", features = ["server", "macros", "transport-io", "schemars"] }
arc-swap = "1"
futures-util = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
